--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -17,7 +17,7 @@
 
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
-      <!-- Set default wifi AP to Dirty Unicorns  -->
-      <string name="wifi_tether_configure_ssid_default" translatable="false">DirtyUnicorns-AP</string>
+    <!-- Set default wifi AP to Dirty Unicorns  -->
+    <string name="wifi_tether_configure_ssid_default" translatable="false">Note-AP</string>
 </resources>
 
